# tucan

./: LICENSE  LICENSE.md  README.md  bedExample.bed  download_model.py  pyproject.toml  third_party_LICENSE
docs/: tumor_abbreviation.md
src/tucan/: cli.py  download_model.py  model.py  zip_utils.py
